# dbdump

./: .gitignore  LICENSE  PACKAGING.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
desktop/: .gitignore  Cargo.toml  package-lock.json  package.json  tauri.conf.json
desktop/capabilities/: default.json
desktop/src/: commands.rs  engines.rs  gzip.rs  lib.rs  main.rs  path_env.rs  provision.rs  runner.rs  secrets.rs  store.rs
frontend/: .dockerignore  .gitlab-ci.yml  Dockerfile  next.config.ts  nginx.conf  package-lock.json  package.json
frontend/.k3s/: app.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: page.tsx
frontend/src/components/: connection-form.tsx  dump-panel.tsx  dump-progress-dialog.tsx  engine-avatar.tsx  os-icons.tsx  theme-toggle.tsx
frontend/src/lib/: dump-command.ts  engine-ui.ts  engines.ts  types.ts  use-is-browser.ts
frontend/src/lib/backend/: demo-dump.ts  index.ts  mock.ts  tauri.ts  types.ts
